refactor: standardize repository and entity naming conventions
- Renamed interface repositories by removing the "I" prefix (e.g., `IUserRepository` → `UserRepository`).
- Standardized entity class names by appending "Entity" suffix (e.g., `Province` → `ProvinceEntity`).
- Updated service, mapper, resolver, and controller logic to adhere to the new naming conventions.
- Removed unused `MessageService` and associated localization logic.
- Introduced utility `toSnakeCase` method in `DataUtil` for string formatting.
- Revised multi-language message files for consistent property keys.
- Adjusted API routes and YAML configurations to reflect updated endpoints.