@@ -1,12 +1,12 @@
 package com.example.websocket_demo.service.location.impl;
 
-import com.example.websocket_demo.dto.response.GisDto;
-import com.example.websocket_demo.dto.response.ProvinceDto;
-import com.example.websocket_demo.dto.response.WardDto;
-import com.example.websocket_demo.entity.AdministrativeRegion;
-import com.example.websocket_demo.entity.AdministrativeUnit;
-import com.example.websocket_demo.entity.GisProvince;
-import com.example.websocket_demo.entity.GisWard;
+import com.example.websocket_demo.common.DataUtil;
+import com.example.websocket_demo.common.MessageService;
+import com.example.websocket_demo.dto.response.*;
+import com.example.websocket_demo.entity.AdministrativeRegionEntity;
+import com.example.websocket_demo.entity.AdministrativeUnitEntity;
+import com.example.websocket_demo.entity.GisProvinceEntity;
+import com.example.websocket_demo.entity.GisWardEntity;
 import com.example.websocket_demo.mapper.LocationMapper;
 import com.example.websocket_demo.repository.*;
 import com.example.websocket_demo.service.location.VietnamLocationService;
@@ -14,12 +14,13 @@ import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.NoSuchElementException;
 import java.util.stream.Collectors;
+
+import static com.example.websocket_demo.enumeration.ResponseMessage.*;
 
 @Slf4j
 @Service
@@ -27,64 +28,104 @@ import java.util.stream.Collectors;
 @FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
 public class VietnamLocationServiceImpl implements VietnamLocationService {
 
-    private final ProvinceRepository provinceRepository;
-    private final WardRepository wardRepository;
-    private final GisProvinceRepository gisProvinceRepository;
-    private final GisWardRepository gisWardRepository;
-    private final AdministrativeRegionRepository administrativeRegionRepository;
-    private final AdministrativeUnitRepository administrativeUnitRepository;
-    private final LocationMapper locationMapper;
+    MessageService messageService;
+    ProvinceRepository provinceRepository;
+    WardRepository wardRepository;
+    GisProvinceRepository gisProvinceRepository;
+    GisWardRepository gisWardRepository;
+    AdministrativeRegionRepository administrativeRegionRepository;
+    AdministrativeUnitRepository administrativeUnitRepository;
+    LocationMapper locationMapper;
 
     @Override
-    public List<AdministrativeRegion> getAllRegions() {
-        return administrativeRegionRepository.findAll();
+    public List<AdministrativeRegionResponse> getAllRegions() {
+        return administrativeRegionRepository.findAll().stream()
+                .map(locationMapper::mapToAdministrativeRegionDto)
+                .toList();
     }
 
     @Override
-    public List<AdministrativeUnit> getAllUnits() {
-        return administrativeUnitRepository.findAll();
+    public AdministrativeRegionResponse getRegionByCodeName(String codeName) {
+        String snakeCaseCodeName = DataUtil.toSnakeCase(codeName);
+        return administrativeRegionRepository.findByCodeName(snakeCaseCodeName)
+                .map(locationMapper::mapToAdministrativeRegionDto)
+                .orElseThrow(() -> new NoSuchElementException(messageService.getMessage(CANNOT_FIND_ADMINISTRATIVE_REGION.getCode(), snakeCaseCodeName)));
     }
 
     @Override
-    public List<ProvinceDto> getAllProvinces() {
+    public List<AdministrativeUnitResponse> getAllUnits() {
+        return administrativeUnitRepository.findAll().stream()
+                .map(locationMapper::mapToAdministrativeUnitDto)
+                .toList();
+    }
+
+    @Override
+    public AdministrativeUnitResponse getUnitByCodeName(String codeName) {
+        String snakeCaseCodeName = DataUtil.toSnakeCase(codeName);
+        return administrativeUnitRepository.findByCodeName(snakeCaseCodeName)
+                .map(locationMapper::mapToAdministrativeUnitDto)
+                .orElseThrow(() -> new NoSuchElementException(messageService.getMessage(CANNOT_FIND_ADMINISTRATIVE_UNIT.getCode(), snakeCaseCodeName)));
+    }
+
+    @Override
+    public List<ProvinceResponse> getAllProvinces() {
         return provinceRepository.findAll().stream()
                 .map(locationMapper::mapToProvinceDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
-    public ProvinceDto getProvinceByCode(String code) {
-        return provinceRepository.findById(code)
+    public List<ProvinceResponse> getProvincesByUnit(String codeName) {
+        String snakeCaseCodeName = DataUtil.toSnakeCase(codeName);
+        return provinceRepository.findByUnitCode(snakeCaseCodeName).stream()
+                .map(locationMapper::mapToProvinceDto)
+                .toList();
+    }
+
+    @Override
+    public List<ProvinceResponse> getProvincesByRegion(String codeName) {
+        String snakeCaseCodeName = DataUtil.toSnakeCase(codeName);
+        return provinceRepository.findByRegionCode(snakeCaseCodeName).stream()
+                .map(locationMapper::mapToProvinceDto)
+                .toList();
+    }
+
+    @Override
+    public ProvinceResponse getProvinceByCodeName(String codeName) {
+        String snakeCaseCodeName = DataUtil.toSnakeCase(codeName);
+        return provinceRepository.findByCodeName(snakeCaseCodeName)
                 .map(locationMapper::mapToProvinceDto)
                 .orElseThrow();
     }
 
     @Override
-    public List<WardDto> getWardsByProvince(String code) {
-        return wardRepository.findByProvinceCode(code).stream()
+    public List<WardResponse> getWardsByProvince(String codeName) {
+        String snakeCaseCodeName = DataUtil.toSnakeCase(codeName);
+        return wardRepository.findByProvinceCodeName(snakeCaseCodeName).stream()
                 .map(locationMapper::mapToWardDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
-    public WardDto getWardByCode(String code) {
-        return wardRepository.findById(code)
+    public WardResponse getWardByCode(String codeName) {
+        String snakeCaseCodeName = DataUtil.toSnakeCase(codeName);
+        return wardRepository.findByCodeName(snakeCaseCodeName)
                 .map(locationMapper::mapToWardDto)
                 .orElseThrow();
     }
 
     @Override
-    public GisDto getGisProvince(String code) {
-        GisProvince gisProvince = gisProvinceRepository.findByProvinceCode(code);
-        if (gisProvince == null) throw new NoSuchElementException("Province not found");
-        return locationMapper.mapToGisProvinceDto(gisProvince);
+    public GisResponse getGisProvince(String code) {
+        GisProvinceEntity gisProvinceEntity = gisProvinceRepository.findByProvinceCode(code);
+        if (gisProvinceEntity == null) throw new NoSuchElementException("Province not found");
+        return locationMapper.mapToGisProvinceDto(gisProvinceEntity);
 
     }
 
     @Override
-    public GisDto getGisWard(String code) {
-        GisWard gisWard = gisWardRepository.findByWardCode(code);
-        if (gisWard == null) throw new NoSuchElementException("Ward not found");
-        return locationMapper.mapToGisWardDto(gisWard);
+    public GisResponse getGisWard(String code) {
+        GisWardEntity gisWardEntity = gisWardRepository.findByWardCode(code);
+        if (gisWardEntity == null) throw new NoSuchElementException("WardEntity not found");
+        return locationMapper.mapToGisWardDto(gisWardEntity);
     }
 }
